# BookSortingRobot

./: README.md  aruco_marker_detector 2.py
UR5_ros/arduino_serial/: package.xml  setup.py
UR5_ros/arduino_serial/arduino_serial/: arduino_serial.py
UR5_ros/arduino_serial/launch/: gripper_launch.py
UR5_ros/src/aruco_detection/: package.xml  requirements.txt  setup.py
UR5_ros/src/aruco_detection/aruco_detection/: aruco_node.py  gripper_node.py  robot_node.py
UR5_ros/src/book_retrieval/: CMakeLists.txt  package.xml  setup.cfg  setup.py
UR5_ros/src/book_retrieval/book_retrieval/: book_detection_node.py  book_move_node.py  gripper_control_node.py
UR5_ros/src/book_retrieval/book_retrieval/msg/: BookInfo.msg
UR5_ros/src/interfaces/: CMakeLists.txt  package.xml
UR5_ros/src/interfaces/srv/: ArmCommand.srv
UR5_ros/src/robot_brain/: CMakeLists.txt  package.xml  setup.cfg  setup.py
UR5_ros/src/robot_brain/robot_brain/: brain_node.py
UR5_ros/src/robot_brain/src/: brain_node.cpp
UR5_ros/src/robot_control/: CMakeLists.txt  package.xml
UR5_ros/src/robot_control/launch/: robot_arm_movements.launch.py
UR5_ros/src/robot_control/src/: robot_arm_movements.cpp
UR5_ros/src/visualisation/: package.xml  setup.py
UR5_ros/src/visualisation/launch/: ur5_grip_launch.py  viz_launch.py  vizz_launch.py
UR5_ros/src/visualisation/urdf/: gripper.urdf.xacro  gripper.xacro  ur5_with_gripper.urdf.xacro  ur5_with_gripper.xacro
UR5_ros/src/visualisation/visualisation/: visulaisation.py
gripper/: gripper.ino
