<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_detection</name>
  <version>0.0.0</version>
  <description>ROS 2 package for detecting ArUco markers using RealSense camera</description>
  <maintainer email="ahmed@todo.todo">ahmed</maintainer>
  <license>TODO: License declaration</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <!-- Python dependencies (will be managed via requirements.txt) -->
  <exec_depend>opencv-contrib-python</exec_depend>
  <exec_depend>pyrealsense2</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

